# Magic

./: .gitignore  .travis.yml  CMakeLists.txt  Game.cpp  Game.h  LICENSE.md  PlayState.cpp  PlayState.cpp~  PlayState.h  PlayState.h~  README.md  config.makefile  doxygen  main.cpp  main.cpp~  makefile  makefile~  smaple-config.makefile  test  test.trace  zwischenablage
Magicengine/: Debug.cpp  Debug.h  Font.cpp  Font.cpp~  Font.h  Font.h~  Game.cpp  Game.cpp~  Game.h  GameState.h  Load.cpp  Load.h  Object.cpp  Object.h  ObjectManager.cpp  ObjectManager.h  Objekt.cpp  Objekt.h  Physics.cpp  Physics.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  Timer.cpp  Timer.cpp~  Timer.h  Timer.h~
Magiengine/: Create.cpp  Create.h  Game.cpp  Game.cpp~  Game.h  Game.h~  GameState.h  Init.h~  Objekt.cpp  Sprite.cpp  Sprite.cpp~  Sprite.h  Sprite.h~
